[package]
name = "pendulum-node"
version = "1.6.0-a"
authors = ["Pendulum"]
description = "The Pendulum/Amplitude collator node"
homepage = "https://pendulumchain.org"
repository = "https://github.com/pendulum-chain/pendulum"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { workspace = true, default-features = true, features = ["derive"] }
log = { workspace = true, default-features = true}
codec = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
jsonrpsee = { workspace = true, default-features = true, features = ["server"] }
serde_json = { workspace = true, default-features = true }

module-issue-rpc = { workspace = true, default-features = true }
module-oracle-rpc = { workspace = true, default-features = true }
module-redeem-rpc = { workspace = true, default-features = true }
module-replace-rpc = { workspace = true, default-features = true }
module-vault-registry-rpc = { workspace = true, default-features = true }
module-pallet-staking-rpc = { path = "../pallets/parachain-staking/rpc" }
spacewalk-primitives = { workspace = true, default-features = true }

# Local
amplitude-runtime = { path = "../runtime/amplitude" }
foucoco-runtime = { path = "../runtime/foucoco" }
pendulum-runtime = { path = "../runtime/pendulum" }
runtime-common = { path = "../runtime/common" }

# Substrate
frame-benchmarking = {  workspace = true, default-features = true }
frame-benchmarking-cli = {  workspace = true, default-features = true }
pallet-multisig = {  workspace = true, default-features = true }
pallet-treasury = {  workspace = true, default-features = true }
pallet-transaction-payment-rpc = {  workspace = true, default-features = true }
sc-basic-authorship = {  workspace = true, default-features = true }
sc-chain-spec = {  workspace = true, default-features = true }
sc-cli = {  workspace = true, default-features = true }
sc-client-api = {  workspace = true, default-features = true }
sc-consensus = {  workspace = true, default-features = true }
sc-consensus-manual-seal = {  workspace = true, default-features = true }
sc-executor = {  workspace = true, default-features = true }
sc-network = {  workspace = true, default-features = true }
sc-network-sync = {  workspace = true, default-features = true }
sc-rpc = {  workspace = true, default-features = true }
sc-service = {  workspace = true, default-features = true }
sc-sysinfo = {  workspace = true, default-features = true }
sc-telemetry = {  workspace = true, default-features = true }
sc-tracing = {  workspace = true, default-features = true }
sc-transaction-pool = {  workspace = true, default-features = true }
sc-transaction-pool-api = {  workspace = true, default-features = true }
sc-offchain = {  workspace = true, default-features = true }
sp-api = {  workspace = true, default-features = true }
sp-block-builder = {  workspace = true, default-features = true }
sp-blockchain = {  workspace = true, default-features = true }
sp-consensus-aura = {  workspace = true, default-features = true }
sp-core = {  workspace = true, default-features = true }
sp-keystore = {  workspace = true, default-features = true }
sp-offchain = {  workspace = true, default-features = true }
sp-runtime = {  workspace = true, default-features = true }
sp-session = {  workspace = true, default-features = true }
sp-timestamp = {  workspace = true, default-features = true }
sp-transaction-pool = {  workspace = true, default-features = true }
sp-arithmetic = {  workspace = true, default-features = true }
sp-io = {  workspace = true, default-features = true }
substrate-frame-rpc-system = {  workspace = true, default-features = true }
substrate-prometheus-endpoint = {  workspace = true, default-features = true }
try-runtime-cli = {  workspace = true, default-features = true }

# Polkadot
polkadot-cli = {  workspace = true, default-features = true }
polkadot-primitives = {  workspace = true, default-features = true }
polkadot-service = {  workspace = true, default-features = true }
staging-xcm = {  workspace = true, default-features = true }

# Cumulus
cumulus-client-cli = {  workspace = true, default-features = true }
cumulus-client-consensus-aura = {  workspace = true, default-features = true }
cumulus-client-consensus-common = {  workspace = true, default-features = true }
cumulus-client-consensus-proposer = {  workspace = true, default-features = true }
cumulus-client-collator = {  workspace = true, default-features = true }
cumulus-client-network = {  workspace = true, default-features = true }
cumulus-client-parachain-inherent = {  workspace = true, default-features = true }
cumulus-client-service = {  workspace = true, default-features = true }
cumulus-primitives-core = {  workspace = true, default-features = true }
cumulus-primitives-parachain-inherent = {  workspace = true, default-features = true }
cumulus-relay-chain-inprocess-interface = {  workspace = true, default-features = true }
cumulus-relay-chain-interface = {  workspace = true, default-features = true }
cumulus-relay-chain-rpc-interface = {  workspace = true, default-features = true }
cumulus-relay-chain-minimal-node = {  workspace = true, default-features = true }

#bifrost
bifrost-farming-rpc = {  workspace = true, default-features = true }
bifrost-farming-rpc-runtime-api = {  workspace = true, default-features = true }

zenlink-protocol = {  workspace = true, default-features = true }
zenlink-protocol-rpc = {  workspace = true, default-features = true }
zenlink-protocol-runtime-api = {  workspace = true, default-features = true }
futures = { workspace = true, default-features = true}

[build-dependencies]
substrate-build-script-utils = {  workspace = true, default-features = true }

[features]
default = []
runtime-benchmarks = [
	"amplitude-runtime/runtime-benchmarks",
	"foucoco-runtime/runtime-benchmarks",
	"pendulum-runtime/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"amplitude-runtime/try-runtime",
	"foucoco-runtime/try-runtime",
	"pendulum-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-treasury/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime",
	"zenlink-protocol/try-runtime"
]
