[package]
name = "chain-extension-common"
version = "1.6.0-d"
authors = ["Pendulum"]
description = "Chain Extension common definitions"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
pallet-contracts = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }


[features]
default = [
    "std",
]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "pallet-contracts/std",
]

