[package]
name = "price-chain-extension"
description = "Chain extensions for price info"
authors = ["Pendulum"]
edition = "2021"
version = "1.6.0-c"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
chain-extension-common = { path = "../common", default-features = false }

codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-tracing = { workspace = true }
sp-weights = { workspace = true }
pallet-contracts = { workspace = true }
spacewalk-primitives = { workspace = true }

# Open Runtime Module Library
orml-currencies = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }

# Pendulum Pallets
vesting-manager = { path = "../../pallets/vesting-manager", default-features = false }

# DIA
dia-oracle = { workspace = true }


[features]
default = [
    "std",
]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-traits/std",
    "orml-tokens/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-tracing/std",
    "sp-weights/std",
    "vesting-manager/std",
    "dia-oracle/std",
    "pallet-contracts/std",
    "spacewalk-primitives/std",
    "chain-extension-common/std",
]
